--- a/FedAvg_MNIST.ipynb
+++ b/FedAvg_MNIST.ipynb
@@ -241,19 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ac8f878e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (879769786.py, line 22)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[19], line 22\u001b[0;36m\u001b[0m\n\u001b[0;31m    for images, labels in trainloafer:\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def client_training(model, trainloader, epochs=1):\n",
     "    \"\"\"\n",
@@ -293,9 +284,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5c09053",
+   "metadata": {},
+   "source": [
+    "### Code Explanation:\n",
+    "\n",
+    "client_training function: This simulates a single client.\n",
+    "\n",
+    "copy.deepcopy(model): This is crucial! Each client needs its own independent copy of the global model to train on. We don't want them to modify the global model directly.\n",
+    "\n",
+    "local_model.train(): Sets the model to training mode.\n",
+    "\n",
+    "criterion and optimizer: We use a standard loss function and optimizer for our local training.\n",
+    "\n",
+    "The inner for loop is a standard PyTorch training loop for one local epoch.\n",
+    "\n",
+    "The function returns the state_dict, which is a dictionary containing the updated model's parameters (weights and biases)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3525f708",
+   "metadata": {},
+   "source": [
+    "## Step 4: The Server-side Aggregation\n",
+    "\n",
+    "The server's job is to collect the updated parameters from the clients and combine them. We will implement the most common aggregation algorithm, Federated Averaging (FedAvg). FedAvg calculates a weighted average of the client model parameters, where the weight is proportional to the size of the client's training data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1f498749",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1237856363.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def aggregate_parameters(client_updates):\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aggregate_parameters(client_updates):\n",
+    "    \"\"\"\n",
+    "    Aggregates parameters from multiple clients using FedAvg.\n",
+    "\n",
+    "    Args:\n",
+    "        client_updates (list): A list of client state_dicts (parameters).\n",
+    "\n",
+    "    Returns:\n",
+    "        OrderedDict: The aggregated global state_dict.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not client_updates:\n",
+    "        raise ValueError(\"No client updates provided for aggregation.\")\n",
+    "        return None\n",
+    "    \n",
+    "    # We assume all clients have the same number of data points for simplicity\n",
+    "    # In a real-world scenario, you would use weights based on data size.\n",
+    "    global_state_dict = copy.deepcopy(client_updates[0])  # Start with the first client's parameters\n",
+    "\n",
+    "    for name in global_state_dict:\n",
+    "        # Average the parameters across clients\n",
+    "        global_state_dict[name] = torch.zero_like(global_state_dict[name])\n",
+    "\n",
+    "    for client_state_dict in client_updates:\n",
+    "        for name, param in client_state_dict.items():\n",
+    "            global_state_dict[name] += param / len(client_updates)\n",
+    "\n",
+    "    return global_state_dict\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9b66d5c",
    "metadata": {},
    "outputs": [],
    "source": []
