--- a/FedAvg_MNIST.ipynb
+++ b/FedAvg_MNIST.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9a1e7740",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "029b1b58",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "304cd838",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "f940f01a",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "858427d0",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "ac8f878e",
    "metadata": {},
    "outputs": [],
@@ -315,19 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1f498749",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1237856363.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[21], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def aggregate_parameters(client_updates):\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def aggregate_parameters(client_updates):\n",
     "    \"\"\"\n",
@@ -364,12 +355,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd60feef",
+   "metadata": {},
+   "source": [
+    "### Code Explanation:\n",
+    "\n",
+    "The aggregate_parameters function takes a list of state_dicts from the clients.\n",
+    "\n",
+    "It initializes a new dictionary (global_state_dict) with zeros.\n",
+    "\n",
+    "It then iterates through each client's state_dict and adds its parameters to the new global dictionary.\n",
+    "\n",
+    "Finally, it divides by the number of clients to get the average. For simplicity, we are assuming each client has the same amount of data, so it's a simple average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "457b4e16",
+   "metadata": {},
+   "source": [
+    "## Step 5: The Federated Training Loop\n",
+    "\n",
+    "Now we put all the pieces together in a main loop that simulates the federated training process over multiple rounds."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f9b66d5c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def server_evaluation(model, dataloader):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Evaluates the global model on the server's test dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        model (nn.Module): The global model to evaluate.\n",
+    "        dataloader (DataLoader): The test dataset DataLoader.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The accuracy of the model on the test dataset.\n",
+    "    \"\"\"\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in dataloader:\n",
+    "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    accuracy = 100 * correct / total if total > 0 else 0\n",
+    "    return accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3d315920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global model initialized on the server.\n",
+      "initial global model accuracy: 14.98%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the global model on the server\n",
+    "global_model = MLP().to(DEVICE)\n",
+    "print(\"Global model initialized on the server.\")\n",
+    "print(f\"initial global model accuracy: {server_evaluation(global_model, test_dataloader):.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa780b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Federated Learning Main Loop\n",
+    "NUM_ROUNDS = 5\n",
+    "CLIENTS_PER_ROUND = 5 # Number of clients to select for each round\n",
+    "\n",
+    "for round_num in range(NUM_ROUNDS):\n",
+    "    print(f\"\\n--- Starting Federated Learning Round {round_num + 1}/{NUM_ROUNDS} ---\")\n",
+    "\n",
+    "    # 1. Server selects a subset of clients for the current round\n",
+    "    participating_clients_indices = random.sample(range(NUM_CLIENTS), CLIENTS_PER_ROUND)\n",
+    "    print(f\"Server selects clients: {participating_clients_indices}\")\n",
+    "\n",
+    "    # 2. Server sends the global model to the selected clients\n",
+    "    client_updates = []\n",
+    "\n",
+    "    for client_idx in participating_clients_indices:\n",
+    "        # Simulate local training on each client\n",
+    "        print(f\"Client {client_idx} is training...\")\n",
+    "        client_dataloader = client_trainloaders[client_idx]\n",
+    "        local_state_dict = client_training(global_model, client_dataloader, epochs=1)\n",
+    "        client_updates.append(local_state_dict)\n",
+    "\n",
+    "    # 3. Server aggregates the updates from all the participating clients\n",
+    "    new_global_state_dict = aggregate_parameters(client_updates)\n",
+    "    print(f\"Global model parameters Aggregated.\")\n",
+    "\n",
+    "    # 4. Server updates the global model with the aggregated parameters\n",
+    "    if new_global_state_dict is not None:\n",
+    "        global_model.load_state_dict(new_global_state_dict)\n",
+    "        print(f\"Global model parameters updated.\")\n",
+    "\n",
+    "    # 5. Evaluate the updated global model on the server's test dataset\n",
+    "    accuracy = server_evaluation(global_model, test_dataloader)\n",
+    "    print(f\"Global model accuracy after round {round_num + 1}: {accuracy:.2f}%\")\n",
+    "    print(\"Round completed.\\n\")\n",
+    "\n",
+    "print(\"\\n--- Federated Learning Finished ---\")\n"
+   ]
   }
  ],
  "metadata": {
