--- a/FedAvg_MNIST/FedAvg_MNIST.ipynb
+++ b/FedAvg_MNIST/FedAvg_MNIST.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "ac8f878e",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
     "            # Backward pass and optimization\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            \n",
+    "    #print(local_model.state_dict().keys())\n",
     "    return local_model.state_dict()\n"
    ]
   },
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "1f498749",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
     "\n",
     "    for name in global_state_dict:\n",
     "        # Average the parameters across clients\n",
-    "        global_state_dict[name] = torch.zero_like(global_state_dict[name])\n",
+    "        global_state_dict[name] = torch.zeros_like(global_state_dict[name])\n",
     "\n",
     "    for client_state_dict in client_updates:\n",
     "        for name, param in client_state_dict.items():\n",
@@ -442,7 +442,63 @@
    "execution_count": null,
    "id": "fa780b69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Starting Federated Learning Round 1/5 ---\n",
+      "Server selects clients: [1, 9, 0, 8, 7]\n",
+      "Client 1 is training...\n",
+      "Client 9 is training...\n",
+      "Client 0 is training...\n",
+      "Client 8 is training...\n",
+      "Client 7 is training...\n",
+      "Global model parameters Aggregated.\n",
+      "Global model parameters updated.\n",
+      "Global model accuracy after round 1: 91.91%\n",
+      "Round completed.\n",
+      "\n",
+      "\n",
+      "--- Starting Federated Learning Round 2/5 ---\n",
+      "Server selects clients: [7, 9, 6, 0, 1]\n",
+      "Client 7 is training...\n",
+      "Client 9 is training...\n",
+      "Client 6 is training...\n",
+      "Client 0 is training...\n",
+      "Client 1 is training...\n",
+      "Global model parameters Aggregated.\n",
+      "Global model parameters updated.\n",
+      "Global model accuracy after round 2: 93.04%\n",
+      "Round completed.\n",
+      "\n",
+      "\n",
+      "--- Starting Federated Learning Round 3/5 ---\n",
+      "Server selects clients: [1, 7, 0, 5, 9]\n",
+      "Client 1 is training...\n",
+      "Client 7 is training...\n",
+      "Client 0 is training...\n",
+      "Client 5 is training...\n",
+      "Client 9 is training...\n",
+      "Global model parameters Aggregated.\n",
+      "Global model parameters updated.\n",
+      "Global model accuracy after round 3: 93.76%\n",
+      "Round completed.\n",
+      "\n",
+      "\n",
+      "--- Starting Federated Learning Round 4/5 ---\n",
+      "Server selects clients: [3, 0, 2, 4, 5]\n",
+      "Client 3 is training...\n",
+      "Client 0 is training...\n",
+      "Client 2 is training...\n",
+      "Client 4 is training...\n",
+      "Client 5 is training...\n",
+      "Global model parameters Aggregated.\n",
+      "Global model parameters updated.\n"
+     ]
+    }
+   ],
    "source": [
     "# Federated Learning Main Loop\n",
     "NUM_ROUNDS = 5\n",
@@ -462,7 +518,7 @@
     "        # Simulate local training on each client\n",
     "        print(f\"Client {client_idx} is training...\")\n",
     "        client_dataloader = client_trainloaders[client_idx]\n",
-    "        local_state_dict = client_training(global_model, client_dataloader, epochs=1)\n",
+    "        local_state_dict = client_training(global_model, client_dataloader, epochs=10)\n",
     "        client_updates.append(local_state_dict)\n",
     "\n",
     "    # 3. Server aggregates the updates from all the participating clients\n",
@@ -481,6 +537,43 @@
     "\n",
     "print(\"\\n--- Federated Learning Finished ---\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4080f70b",
+   "metadata": {},
+   "source": [
+    "### Code Explanation:\n",
+    "\n",
+    "server_evaluation: A simple function to test the global model on the central test set after each round.\n",
+    "\n",
+    "global_model = MLP().to(DEVICE): This is our central, shared model.\n",
+    "\n",
+    "NUM_ROUNDS: How many times the federated learning cycle will repeat.\n",
+    "\n",
+    "CLIENTS_PER_ROUND: This is a key parameter in FL. Not all clients need to participate in every round. Here, we randomly select 5 out of 10 clients.\n",
+    "\n",
+    "random.sample: Randomly selects the client indices for the current round.\n",
+    "\n",
+    "The for loop for client_idx in participating_clients_indices: simulates the server sending the model to the clients and receiving their updates.\n",
+    "\n",
+    "global_model.load_state_dict(new_global_state_dict): This is the final step in each round, where the server updates its global model with the newly aggregated parameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbc09e8",
+   "metadata": {},
+   "source": [
+    "## Congratulations! \n",
+    "You have now built a working federated learning simulation from scratch using only PyTorch. You can see the model's accuracy improve over each round without the server ever seeing a single piece of client data. This is the fundamental power of federated learning.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96b3ca23",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
