--- a/FedAvg_MNIST/FedAvg_MNIST.ipynb
+++ b/FedAvg_MNIST/FedAvg_MNIST.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "932a3fc4",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e894887a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "16378630",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5c2920a1",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "20e4fb7a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9a1e7740",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "029b1b58",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "304cd838",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f940f01a",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "858427d0",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "ac8f878e",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "1f498749",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "f9b66d5c",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "3d315920",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
      "output_type": "stream",
      "text": [
       "Global model initialized on the server.\n",
-      "initial global model accuracy: 14.98%\n"
+      "initial global model accuracy: 9.05%\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fa780b69",
    "metadata": {},
    "outputs": [
@@ -449,53 +449,71 @@
      "text": [
       "\n",
       "--- Starting Federated Learning Round 1/5 ---\n",
-      "Server selects clients: [1, 9, 0, 8, 7]\n",
-      "Client 1 is training...\n",
+      "Server selects clients: [5, 9, 4, 3, 1]\n",
+      "Client 5 is training...\n",
       "Client 9 is training...\n",
-      "Client 0 is training...\n",
-      "Client 8 is training...\n",
-      "Client 7 is training...\n",
+      "Client 4 is training...\n",
+      "Client 3 is training...\n",
+      "Client 1 is training...\n",
       "Global model parameters Aggregated.\n",
       "Global model parameters updated.\n",
-      "Global model accuracy after round 1: 91.91%\n",
+      "Global model accuracy after round 1: 90.57%\n",
       "Round completed.\n",
       "\n",
       "\n",
       "--- Starting Federated Learning Round 2/5 ---\n",
-      "Server selects clients: [7, 9, 6, 0, 1]\n",
+      "Server selects clients: [7, 0, 4, 1, 3]\n",
       "Client 7 is training...\n",
-      "Client 9 is training...\n",
-      "Client 6 is training...\n",
       "Client 0 is training...\n",
+      "Client 4 is training...\n",
       "Client 1 is training...\n",
+      "Client 3 is training...\n",
       "Global model parameters Aggregated.\n",
       "Global model parameters updated.\n",
-      "Global model accuracy after round 2: 93.04%\n",
+      "Global model accuracy after round 2: 92.21%\n",
       "Round completed.\n",
       "\n",
       "\n",
       "--- Starting Federated Learning Round 3/5 ---\n",
-      "Server selects clients: [1, 7, 0, 5, 9]\n",
-      "Client 1 is training...\n",
-      "Client 7 is training...\n",
-      "Client 0 is training...\n",
-      "Client 5 is training...\n",
+      "Server selects clients: [6, 4, 2, 9, 1]\n",
+      "Client 6 is training...\n",
+      "Client 4 is training...\n",
+      "Client 2 is training...\n",
       "Client 9 is training...\n",
+      "Client 1 is training...\n",
       "Global model parameters Aggregated.\n",
       "Global model parameters updated.\n",
-      "Global model accuracy after round 3: 93.76%\n",
+      "Global model accuracy after round 3: 93.21%\n",
       "Round completed.\n",
       "\n",
       "\n",
       "--- Starting Federated Learning Round 4/5 ---\n",
-      "Server selects clients: [3, 0, 2, 4, 5]\n",
-      "Client 3 is training...\n",
-      "Client 0 is training...\n",
-      "Client 2 is training...\n",
+      "Server selects clients: [1, 9, 4, 0, 7]\n",
+      "Client 1 is training...\n",
+      "Client 9 is training...\n",
       "Client 4 is training...\n",
-      "Client 5 is training...\n",
+      "Client 0 is training...\n",
+      "Client 7 is training...\n",
       "Global model parameters Aggregated.\n",
-      "Global model parameters updated.\n"
+      "Global model parameters updated.\n",
+      "Global model accuracy after round 4: 94.00%\n",
+      "Round completed.\n",
+      "\n",
+      "\n",
+      "--- Starting Federated Learning Round 5/5 ---\n",
+      "Server selects clients: [2, 7, 6, 4, 9]\n",
+      "Client 2 is training...\n",
+      "Client 7 is training...\n",
+      "Client 6 is training...\n",
+      "Client 4 is training...\n",
+      "Client 9 is training...\n",
+      "Global model parameters Aggregated.\n",
+      "Global model parameters updated.\n",
+      "Global model accuracy after round 5: 94.74%\n",
+      "Round completed.\n",
+      "\n",
+      "\n",
+      "--- Federated Learning Finished ---\n"
      ]
     }
    ],
