Scaffold_CIFAR100 Added

--- a/FedProx_CIFAR10/FedProx_CIFAR10.ipynb
+++ b/FedProx_CIFAR10/FedProx_CIFAR10.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b9a3edcb",
    "metadata": {},
    "outputs": [],
@@ -201,6 +201,82 @@
     "        x = torch.relu(self.fc2(x))\n",
     "        x = self.fc3(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7b28cf",
+   "metadata": {},
+   "source": [
+    "### Code Explanation:\n",
+    "\n",
+    "This is a standard CNN architecture for CIFAR-10, with two convolutional layers followed by pooling and a few fully connected layers.\n",
+    "\n",
+    "The forward method outlines the flow of data, from convolution to classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8f94ad7",
+   "metadata": {},
+   "source": [
+    "## Step 3: The Client-side Training Loop with FedProx\n",
+    "\n",
+    "This is where we implement the FedProx algorithm. We will add a regularization term to the local loss function. This term penalizes the client's model if its parameters deviate too much from the global model's parameters. This helps stabilize training on non-IID data.\n",
+    "\n",
+    "The FedProx loss function is:\n",
+    "L_client(w)=L_local(w)+\n",
+    "fracmu2\n",
+    "sum_i(w_i−w_global,i) \n",
+    "2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9541d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def client_training_fedprox(model, global_model_weights, trainloader, epochs=1, mu=0.01):\n",
+    "    \"\"\"\n",
+    "    Performs a single round of local training with FedProx on a client's data.\n",
+    "\n",
+    "    Args:\n",
+    "        model (nn.Module): The client's local model instance.\n",
+    "        global_model_weights (dict): The state_dict of the global model from the server.\n",
+    "        trainloader (DataLoader): The client's local data loader.\n",
+    "        mu (float): The regularization parameter for FedProx.\n",
+    "        epochs (int): Number of local epochs to train for.\n",
+    "\n",
+    "    Returns:\n",
+    "        OrderedDict: The updated state_dict after local training.\n",
+    "    \"\"\"\n",
+    "    local_model = model.to(DEVICE)\n",
+    "    local_model.train()\n",
+    "\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    # Load the global model weights into the local model\n",
+    "    optimizer = optim.SGD(local_model.parameters(), lr=0.01)\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        for inputs, labels in trainloader:\n",
+    "            inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            outputs = model(inputs)\n",
+    "            loss = nn.CrossEntropyLoss()(outputs, labels)\n",
+    "            \n",
+    "            # Add the FedProx regularization term\n",
+    "            prox_loss = 0.0\n",
+    "            for param, global_param in zip(model.parameters(), global_model_weights):\n",
+    "                prox_loss += torch.sum((param - global_param) ** 2)\n",
+    "            loss += mu * prox_loss\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "    return model.state_dict()"
    ]
   }
  ],
